# k_unit_converter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  kunit.py  pyproject.toml  run_gui.pyw
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  aluminium_bar_kg-m-s.k  steel_coupon_ton-mm-s.k  steel_plate_kg-m-s.k
kunit/: __init__.py  cli.py  convert.py  detect.py  gui.py  parser.py  schema.py  units.py
kunit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_kunit.py  test_t0_convert.py  test_t0_detect.py  test_t0_parser.py  test_t1_coverage.py  test_t2_cli.py  test_t2_engine.py  test_t3_packaging.py  test_t4_router.py
