[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kunit"
version = "0.2.0"
description = "LS-DYNA .k deck unit-system converter with auto-detection"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
kunit = "kunit.cli:main"
kunit-gui = "kunit.gui:main"

[tool.setuptools]
packages = ["kunit"]
