[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kunit"
description = "LS-DYNA .k deck unit-system converter with auto-detection"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Minh Quang Pham"}]
keywords = ["ls-dyna", "unit-conversion", "cae", "fea", "keyword-deck", "preprocessing"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["coverage", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/pmquang87/k_unit_converter"
Repository = "https://github.com/pmquang87/k_unit_converter"
Issues = "https://github.com/pmquang87/k_unit_converter/issues"
Changelog = "https://github.com/pmquang87/k_unit_converter/blob/master/CHANGELOG.md"

[project.scripts]
kunit = "kunit.cli:main"
kunit-gui = "kunit.gui:main"

[tool.setuptools]
packages = ["kunit"]

[tool.setuptools.dynamic]
# NB: attr targets kunit/__init__.py explicitly (kunit.__init__) so setuptools'
# module finder does not pick up the top-level kunit.py wrapper by mistake.
version = {attr = "kunit.__init__.__version__"}

[tool.setuptools.package-data]
kunit = ["py.typed"]

[tool.coverage.run]
source = ["kunit"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E741", "E731"]
